--- a/35_FreeRTOS_01_Start/35_FreeRTOS_01_Start.ioc
+++ b/35_FreeRTOS_01_Start/35_FreeRTOS_01_Start.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configMAX_PRIORITIES,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY
-FREERTOS.Tasks01=Name_Start_Task,0,128,Start_Task,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=Name_Start_Task,0,128,Start_Task,Default,NULL,Dynamic,NULL,NULL;myTask02,-3,256,StartTask02,Default,NULL,Dynamic,NULL,NULL;myTask03,-3,256,StartTask03,Default,NULL,Dynamic,NULL,NULL;myTask04,3,256,StartTask04,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY=5
 FREERTOS.configMAX_PRIORITIES=32
 File.Version=6
@@ -11,10 +11,8 @@ Mcu.IP0=FREERTOS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM3
-Mcu.IP5=TIM5
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP4=USART1
+Mcu.IPNb=5
 Mcu.Name=STM32F429I(E-G)Tx
 Mcu.Package=LQFP176
 Mcu.Pin0=PC14/OSC32_IN
@@ -22,8 +20,6 @@ Mcu.Pin1=PC15/OSC32_OUT
 Mcu.Pin10=PB3
 Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin12=VP_SYS_VS_tim1
-Mcu.Pin13=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin14=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin2=PH0/OSC_IN
 Mcu.Pin3=PH1/OSC_OUT
 Mcu.Pin4=PB0
@@ -32,7 +28,7 @@ Mcu.Pin6=PA9
 Mcu.Pin7=PA10
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=15
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IGTx
@@ -49,8 +45,6 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM5_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -145,22 +139,11 @@ RCC.VCOSAIOutputFreq_ValueQ=20416666.666666668
 RCC.VCOSAIOutputFreq_ValueR=40833333.333333336
 RCC.VcooutputI2S=160000000
 RCC.VcooutputI2SQ=160000000
-TIM3.IPParameters=Prescaler,Period,TIM_MasterSlaveMode
-TIM3.Period=10000-1
-TIM3.Prescaler=9000-1
-TIM3.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
-TIM5.IPParameters=Prescaler,Period
-TIM5.Period=10000-1
-TIM5.Prescaler=9000-1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
-VP_TIM5_VS_ClockSourceINT.Mode=Internal
-VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=custom
 isbadioc=false
